--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 	<title>Side Navigation Bar with Curved Borders</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 <body>
 
 <div class="wrapper">
+	<div class="shadow"></div>
 	<div class="side_bar">
 		<div class="side_bar_top">
 			<div class="logo_wrap">
