--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Side Navigation Bar with Curved Borders</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 					<span class="text">Coding Boss</span></a>
 			</div>
 			<div class="side_bar_menu">
-				<div class="menu"><i class="fas fa-long-arrow-alt-right"></i>
+				<div class="menu"><ion-icon class="i" name="arrow-forward-outline"></ion-icon>
 				</div>
 			</div>
 		</div>
@@ -27,42 +27,42 @@
 				<li class="active">
 					<span class="top_curve"></span>
 					<a href="#">
-						<span class="icon"><i class="fas fa-home"></i></span>
+						<span class="icon"><ion-icon name="home-sharp"></ion-icon>	</span>
 						<span class="item">Dashboard</span></a>
 					<span class="bottom_curve"></span>
 				</li>
 				<li>
 					<span class="top_curve"></span>
 					<a href="#">
-						<span class="icon"><i class="fas fa-fighter-jet"></i></span>
+						<span class="icon"><ion-icon name="airplane-sharp"></ion-icon></span>
 						<span class="item">Flights</span></a>
 					<span class="bottom_curve"></span>
 				</li>
 				<li>
 					<span class="top_curve"></span>
 					<a href="#">
-						<span class="icon"><i class="fas fa-wallet"></i></span>
+						<span class="icon"><ion-icon name="wallet-sharp"></ion-icon></span>
 						<span class="item">Wallet</span></a>
 					<span class="bottom_curve"></span>
 				</li>
 				<li>
 					<span class="top_curve"></span>
 					<a href="#">
-						<span class="icon"><i class="far fa-newspaper"></i></span>
+						<span class="icon"><ion-icon name="newspaper-sharp"></ion-icon></span>
 						<span class="item">Reports</span></a>
 					<span class="bottom_curve"></span>
 				</li>
 				<li>
 					<span class="top_curve"></span>
 					<a href="#">
-						<span class="icon"><i class="fas fa-chart-pie"></i></span>
+						<span class="icon"><ion-icon name="pie-chart-sharp"></ion-icon></span>
 						<span class="item">Statistics</span></a>
 					<span class="bottom_curve"></span>
 				</li>
 				<li>
 					<span class="top_curve"></span>
 					<a href="#">
-						<span class="icon"><i class="fas fa-cog"></i></span>
+						<span class="icon"><ion-icon name="settings-sharp"></ion-icon></span>
 						<span class="item">Settings</span></a>
 					<span class="bottom_curve"></span>
 				</li>
